# talk_ugaachen2025april_code

./: README.md
01/: CMakeLists.txt
01/src/: main.cpp
02/: CMakeLists.txt
02/inc_inside/: inside_redir.hpp
02/inc_outside/: outside.hpp  outside_redir.hpp
02/src/: main.cpp
03/inc_inside/: inside.hpp  inside_redir.hpp
03/inc_outside/: outside_redir.hpp
04/: CMakeLists.txt  inoutmapping.imp  mapping_script.sh
